<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2015 xiaocong@gmail.com
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  ~ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
  ~ DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
  ~ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
  ~ OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>

  <string name="app_name">TikMatrix</string>
  <string name="action_settings">Settings</string>
  <string name="monitor_service_ticker">UIAutomator service started</string>
  <string name="monitor_service_title">TikMatrix</string>
  <string name="monitor_service_text">service is running!</string>
  <string name="fast_input_label">FastInputIME</string>
  <string name="running_status">Status:</string>
  <string name="develop_mode">Developer Mode</string>
  <string name="no_permission_tip">No permission to write SD card</string>
  <string name="available_internal_storage">Storage:</string>
  <string name="ip_address">IP:</string>
  <string name="wan_ip_address">WAN IP:</string>
  <string name="available_sd_storage">Available SD Card Storage:</string>
  <string name="notification_permission">Notification Permission</string>
  <string name="floating_window_permission">Floating Window Permission</string>
  <string name="language">Language:</string>
  <string name="timezone">Timezone:</string>
  <string name="model">Model</string>
  <string name="version">Version</string>
  <string name="hardware_info">Hardware Info</string>
  <string name="network_info">Network Info</string>
  <string name="permissions">Permissions</string>
  <string name="cpu_info">CPU</string>
  <string name="memory_info">Memory</string>
  <string name="screen_info">Screen</string>
  <string name="battery_info">Battery</string>
  <string name="network_type">Network Type</string>
  <string name="mac_address">MAC Address</string>
  <string name="agent_running">Agent is running!</string>
  <string name="agent_not_installed">Agent not installed!</string>
  <string name="agent_not_running">Agent not started!</string>
  <string name="status_success">Success</string>
  <string name="network_disconnected">Disconnected</string>
  <string name="network_wifi">WiFi</string>
  <string name="network_mobile">Mobile data</string>
  <string name="battery_charging">Charging</string>
  <string name="not_available">Not available</string>
  <string name="cores">cores</string>
  <string name="unable_to_get">Unable to get</string>

</resources>