<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.tikmatrix.MainActivity"
    android:padding="16dp"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner"
        android:elevation="4dp">

        <!-- 顶部信息区域 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/rounded_corner"
            android:layout_marginBottom="4dp">


            <TextView
                android:id="@+id/current_time"
                style="@style/CenterTitle"
                android:text=""
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />
            <TextView
                android:id="@+id/timezone"
                style="@style/CenterTitle"
                android:text=""
                android:textSize="16sp"
                android:layout_marginTop="2dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            android:layout_marginVertical="8dp" />
        <!-- 状态信息区域 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_corner">

            <TextView
                style="@style/LeftTitle"
                android:text="@string/running_status" />

            <TextView
                android:id="@+id/running_status"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>
        <!-- 系统信息区域 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_corner">
            <TextView
                style="@style/LeftTitle"
                android:text="@string/model" />
            <TextView
                android:id="@+id/product_name"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_corner">
            <TextView
                style="@style/LeftTitle"
                android:text="@string/version" />

            <TextView
                android:id="@+id/android_system_version"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_corner">

            <TextView
                style="@style/LeftTitle"
                android:text="@string/language" />

            <TextView
                android:id="@+id/language"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_corner">

            <TextView
                style="@style/LeftTitle"
                android:text="@string/available_internal_storage" />

            <TextView
                android:id="@+id/in_storage"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>

        <!-- 网络信息区域 -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_corner">

            <TextView
                style="@style/LeftTitle"
                android:text="@string/ip_address" />

            <TextView
                android:id="@+id/ip_address"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_width="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_corner">

            <TextView
                style="@style/LeftTitle"
                android:text="@string/wan_ip_address" />

            <TextView
                android:id="@+id/wan_ip_address"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>
        <!-- 权限设置区域 -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_corner">

            <TextView
                style="@style/LeftTitle"
                android:text="@string/notification_permission" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/notification_permission"
                android:layout_weight="1"
                android:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_corner">

            <TextView
                style="@style/LeftTitle"
                android:text="@string/floating_window_permission" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/floating_window_permission"
                android:layout_weight="1"
                android:checked="true" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>